<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dinner Planner</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeText">Welcome to Dinner Planner!\nHere you will be able to easily plan your dinner.\nOn the next page start by selecting number of participants.\nThen select your courses.\n\nWatch Magic Happen!</string>
    <string name="welcomeBtn">Start</string>
    <string name="participantsText">Participants</string>
    <string name="totalCostText">Total cost:</string>
    <string name="chooseMenuText">Choose Menu</string>
    <string name="starterText">Starter</string>
    <string name="mainCourseText">Main Course</string>
    <string name="dessertsText">Dessert</string>
    <string name="createBtn">Create</string>
    <string name="chooseBtn">Choose</string>
    <string name="toastText">Toast</string>
    <string name="cost">Cost</string>
    <string name="_0">0</string>
    <string name="ingredientsText">Ingredients</string>
    <string name="instructionsText">Instructions</string>
    <string name="persText">0 pers</string>
    <string name="ingredientsList">wololo</string>
    <string name="typeOfCourse">Starter</string>
    <string name="nameOfCourse">Crostini</string>
    <string name="instructionDesc">hej hEJE hej hej eje hehj\\n hejejhe</string>
    <string name="filter_recipes">Filter recipes</string>


</resources>
