<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin">
        <TextView
            android:text="@string/participantsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/participantsText"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="bottom"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="bottom" />

        <TextView
            android:text="@string/totalCostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalCostText"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_gravity="bottom" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseMenuText"
        android:id="@+id/chooseMenuText"
        android:textSize="20dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starterText"
        android:id="@+id/starterText"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainCourseText"
        android:id="@+id/mainCourseText"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dessertsText"
        android:id="@+id/dessertsText"
        android:textSize="15dp"
        android:textStyle="bold"/>
</LinearLayout>