<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalCostText"
        android:id="@+id/totalCostIngredientsText"
        android:textSize="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:id="@+id/totalSumIngredients"
        android:textSize="16dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        />
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionsText"
        android:text="@string/instructionsText"
        android:layout_gravity="center"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <include layout="@layout/menuitem"
            android:id="@+id/ingredient_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </include>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <include layout="@layout/ingredients_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </include>

</LinearLayout>